--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
+    "framer-motion": "^11.0.6",
     "glsl-random": "^0.0.5",
     "next": "^14.0.4",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.4",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.1.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -43,6 +45,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "raw-loader": "^4.0.2",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.0",
     "url-loader": "^4.1.1"
   }
